--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A digital media app written using electron",
   "main": "index.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
