--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pctv",
   "version": "0.0.0",
   "description": "A digital media app written using electron",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
